--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -24,7 +24,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="{{ path('logement_liste') }}">Liste des logements</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{{ path('reservation_index') }}">Réservations</a>
+                                <a class="dropdown-item" href="{{ path('reservation_liste') }}">Réservations</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Commentaires (TODO)</a>
                             </div>
@@ -34,9 +34,9 @@
                             Types d'habitat
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{{ path('type_logement_index') }}">Liste des types d'habitat</a>
+                                <a class="dropdown-item" href="{{ path('type_logement_liste') }}">Liste des types d'habitat</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{{ path('parametres_type_index', {'type': 0}) }}">Paramètres</a>                                
+                                <a class="dropdown-item" href="{{ path('parametres_type_liste', {'type': 0}) }}">Paramètres</a>                                
                             </div>
                         </li>
                         <li class="nav-item">
