proposer logement #17 - done

--- a/templates/admin/logement/logement-new.html.twig
+++ b/templates/admin/logement/logement-new.html.twig
@@ -16,9 +16,8 @@
     {{ form_start(form) }}
         {{ form_widget(form) }}
         <br>
-        <div id="parametres">
-            <h4>Paramètres de l'habitat</h4>
-        </div>
+        <h4>Paramètres de l'habitat</h4>
+        <div id="parametres"></div>
         <br>
         <button class="btn btn-success">Enregistrer</button>
     {{ form_end(form) }}
