--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -17,13 +17,35 @@
         {% endfor %}   
         <br>
         {{ form_start(form) }}
-            {{ form_widget(form) }}
-            <br>
-            <div id="parametres">
-                <h4>Paramètres de l'habitat</h4>
+            <div class="form-group">
+                {{ form_row(form.id_type) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.nom) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.description) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.adresse) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.codePostal) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.prix) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.nbPersonne) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.photosUploads) }}
             </div>
             <br>
-            <button class="btn btn-success">Enregistrer</button>
+            <h4>Paramètres de l'habitat</h4>
+            <div id="parametres"></div>
+            <br>
+            <button class="btn btn-success btn-lg btn-block">Ajoutez votre bien</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
