--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,35 +1,6 @@
-#logo{
-	margin-left: 0.9375em;
-	display: inline-block;
-	margin-right: 1.875em;
-	width: 60px;
-	height: 60px;
-}
-
-#title a{
-	display: inline-block;
+#title{
 	text-transform: uppercase;
-	text-decoration:none; 
-	color: black;
-	font-weight: bold;
-	margin-top: 1.1em;
-}
-
-.navbar {
-	height: auto;
-	margin-top: -1em;
-	margin-bottom: -1em;
-}
-
-#btnInscrire{
-	float: right;
-	margin-top: 0.2em;
-	margin-right: 3.125em;
-}
-
-#btnConnecter{
-	float: right;
-	margin-top: 0.2em;
+	font-weight: 600;
 }
 
 #btnDeco{
@@ -39,7 +10,7 @@
 }
 
 #btnDeco:hover{
-	background-color: orangered;
+	background-color: #C64300;
 }
 
 #Utilisateur{
@@ -76,7 +47,7 @@
 
 
 #formulaire > img{
-	height: 30rem;
+	height: 35rem;
 	width: 100%; 
 	background-attachment:fixed;
 	object-fit: cover;
@@ -86,8 +57,10 @@
 	position:absolute;
 	right: 0; 
 	margin-right: 6.25rem;
-    margin-top: 6rem;
-	
+	margin-top: 6rem;
+	background-color: white;
+    padding: 30px;
+    border-radius: 10px;
 }
 
 #transparence-form-prod{
@@ -116,11 +89,11 @@
 
 #formulaire .form-control{
 	width: 18.75em;
-	color: orangered;
+	color: #C64300;
 }
 
 .input-group>.input-group-append>.btn{
-	color:orangered;
+	color:#C64300;
 	margin-left: -2.3125em;
 	border: none;
 }
@@ -146,7 +119,11 @@
 	background-color: #C64300;
 	color: white;
 	float: right;
-	width: 12.5em;
+	width: 100%;
+}
+
+.gj-picker-bootstrap table tr td.selected.gj-cursor-pointer div{
+	background-color: #C64300 !important;
 }
 
 .btn-photo{
@@ -306,7 +283,7 @@ ul.list-unstyled li a{
   /* On hover, add a black background color with a little bit see-through */
   .precedent:hover,
   .suivant:hover {
-	background-color: orangered;
+	background-color: #C64300;
   }
   
   /* Number text (1/3 etc) */
