--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -96,7 +96,7 @@ h3 {
 {% endfor %}
 <div id="formulaire">
     {% include 'form-recherche.html.twig' %}
-    <img src="/img/imageFormRecherche.png"/>
+    <img src="/img/chair.jpeg"/>
 </div>
 
  <div class="container carouselmarge">
