--- a/templates/home/recherche.html.twig
+++ b/templates/home/recherche.html.twig
@@ -5,116 +5,37 @@
 {% block body %}
 
 <div id="formulaire">
-<div id="transparence-form-rech"></div>  
-    {% include 'form-recherche.html.twig' %}
-  <img src="/img/imageFormRecherche.png"/>
+  {% include 'form-recherche.html.twig' %}
+  <img src="/img/chair.jpeg" />
 </div>
-  <br/>
+
 <div class="container">
-    {% if logements is empty %}
-        <div class="row">
-      <div class="col-sm3">
-        <h1>Aucun résultats</h1>
+  {% if logements is empty %}
+  <div class="row">
+    <div class="col-sm3">
+      <h3>Aucun résultats</h3>
+    </div>
+  </div>
+  {% else %}
+  <div class="row">
+    <div class="col-sm3">
+      <h1>Résultats de la recherche:</h1>
+    </div>
+  </div>
+  <div class="card-deck">
+    {% for lo in logements %}
+    <div class="card">
+      <img class="card-img-top" src="/img/cabane.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h4 class="card-title ">{{ lo.nom }}</h4>
+        <h5 class="card-title">LIMOGES - {{ lo.prix }}€/nuit </h5>
+        <p class="card-text">{{ lo.description }}</p>
+        <button type="button" class="btn btn-consulter"><a href="{{ path('logement_index', {'id': lo.id}) }}" class="a-consulter">Consulter</a></button>
       </div>
     </div>
-    {% else %}
-    <div class="row">
-      <div class="col-sm3">
-        <h1>Résultats de la recherche:</h1>
-      </div>
-    </div>
-    <div class="card-deck">
-      {% for lo in logements %}
-        <div class="card">
-          <img class="card-img-top" src="/img/cabane.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title ">{{ lo.nom }}</h4>
-            <h5 class="card-title">LIMOGES - {{ lo.prix }}€/nuit </h5>
-            <p class="card-text">{{ lo.description }}</p>
-            <button type="button" class="btn btn-consulter"><a href="{{ path('logement_index', {'id': lo.id}) }}" class="a-consulter">Consulter</a></button>
-          </div>
-        </div>
-      {% endfor %}
+    {% endfor %}
     {% endif %}
-      <!--<div class="card">
-        <img class="card-img-top" src="/img/yourte.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Yourte</h4>
-          <h5 class="card-title">BRETAGNE - 100€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="/img/bulle.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Bulle et la bête</h4>
-          <h5 class="card-title">PARIS - 115€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-    </div>
-    </br></br>
-    <div class="card-deck">
-      <div class="card">
-        <img class="card-img-top" src="/img/cabane.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title ">Cabane dans le ciel</h4>
-          <h5 class="card-title">LIMOGES - 122€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="/img/yourte.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Yourte</h4>
-          <h5 class="card-title">BRETAGNE - 100€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="/img/bulle.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Bulle et la bête</h4>
-          <h5 class="card-title">PARIS - 115€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-    </div>
-    </br></br>
-    <div class="card-deck">
-      <div class="card">
-        <img class="card-img-top" src="/img/cabane.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title ">Cabane dans le ciel</h4>
-          <h5 class="card-title">LIMOGES - 122€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="/img/yourte.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Yourte</h4>
-          <h5 class="card-title">BRETAGNE - 100€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="/img/bulle.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title">Bulle et la bête</h4>
-          <h5 class="card-title">PARIS - 115€ /nuit </h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
-           <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
-        </div>
-      </div>-->
-    </div>
+  </div>
 </div>
 
 
