--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,4 @@
 #logo{
-	margin-left: 0.9375em;
 	display: inline-block;
 	margin-right: 1.875em;
 	width: 60px;
@@ -12,24 +11,22 @@
 	text-decoration:none; 
 	color: black;
 	font-weight: bold;
-	margin-top: 1.1em;
+	margin-top: 0.7em;
+    font-size: 20px;
 }
 
 .navbar {
 	height: auto;
-	margin-top: -1em;
-	margin-bottom: -1em;
+	margin-top: -1.5em;
+	margin-bottom: -1.5em;
 }
 
 #btnInscrire{
-	float: right;
-	margin-top: 0.2em;
-	margin-right: 3.125em;
+
 }
 
 #btnConnecter{
-	float: right;
-	margin-top: 0.2em;
+
 }
 
 #btnDeco{
@@ -63,6 +60,7 @@
 
 .btn-success{
 	height: 1.875em;
+	width: 10rem;
 }
 
 .btn-success p{
@@ -74,6 +72,7 @@
 }
 
 .btn-primary{
+	width: 10em;
 	height: 1.875em;
 	margin-right: 1.875em;
 }
@@ -387,9 +386,89 @@ footer{
 
 	/*Mobile*/
 
-	@media (min-width: 576px) and (max-width: 767px)
-{
-    #avatarLogin{
-		right:0;
+	@media only screen and (max-width: 991px){
+	.navbar-collapse{
+		margin-top: -1em;
+		padding-bottom: 1.2em;
+	}
+
+	.mobileMenu{
+		background-color: red;
+		width: 500px;
+	}
+    #btnInscrire{
+		margin-right: -1rem;
+	}
+
+	#btnConnecter{
+		margin-right: -1rem;
+		margin-bottom: 0.5rem;
+		margin-top: -1rem;
+	}
+
+	.btn-deconnexion{
+		float: right;
+	}
+	#avatarLogin{
+		float:left ; 
+		margin-left: auto;	
+		margin-right: 1em;
+	}
+	#Utilisateur{
+		float: left ;
+	}
+	#cloche{
+		float: right;
+	}
+
+	#menuMobile  li  a{
+		color: #C64300;
+		text-transform: uppercase;
+    	font-size: 15px;
+		font-weight: 700;
+	}
+
+	#menuMobile  li{
+		border-bottom: 1px solid black;
+	}
+
+	#menuMobile  li a:hover{
+		color: orangered;
+	}
+
+	#menuMobile > li:last-child{
+		border-bottom: none;
+	}
+
+	#menuMobile .picto{
+		float: left;
+		height: 50px;
+		width: 50px;
+		margin-top: -0.5em;
+	}
+}
+
+@media only screen and (max-width: 770px){
+
+	#btnConnecter{
+		margin-right: -1rem;
+		margin-top: -0.7rem;
+		margin-bottom: 1em;
+	}
+
+	#menuMobile  li{
+		margin-top: 0.5em;
+		margin-bottom: -1.5em;
+	}
+
+	#menuMobile  li a{
+		margin-top: 0.5em;
+		margin-bottom: -1em;
+	}
+
+	#menuMobile .picto{
+		float: left;
+		height: 50px;
+		width: 50px;
 	}
 }
