--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -32,6 +32,9 @@
             <div class="form-group">
                 {{ form_row(form.codePostal) }}
             </div>
+                        <div class="form-group">
+                {{ form_row(form.ville) }}
+            </div>
             <div class="form-group">
                 {{ form_row(form.prix) }}
             </div>
