--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -32,9 +32,10 @@
             <div class="form-group">
                 {{ form_row(form.codePostal) }}
             </div>
-            <div class="form-group">
-                {{ form_row(form.ville) }}
-            </div>
+            <!--<div class="form-group">
+                <label for="villeAuto">Ville</label>
+                <input type="text" class="form-control" autocomplete="off" id="logement_ville" />
+            </div>-->
             <div class="form-group">
                 {{ form_row(form.prix) }}
             </div>
