--- a/templates/home/recherche.html.twig
+++ b/templates/home/recherche.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Recherche - Atypik'House{% endblock %}
+{% block title %}Recherche{% endblock %}
 
 {% block body %}
 
