--- a/templates/home/recherche.html.twig
+++ b/templates/home/recherche.html.twig
@@ -13,7 +13,7 @@
   {% if logements is empty %}
   <div class="row">
     <div class="col-sm3">
-      <h3>Aucun résultats</h3>
+      <h3>Aucun résultat</h3>
     </div>
   </div>
   {% else %}
