--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -1,86 +1,86 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Contactez-nous{% endblock %}
 
 {% block body %}
-<style>
-h2.contactTitle {
-	position: absolute;
-	top: 14em;
-	left: 4em;
-	color: white;
-	font-weight: bold;
-}
-
-h3 {
-  padding: 1em 0 1em 0;
-}
-
-#map {
-	width: 100%;
-	height: 200px;
-	background-color: lightgray;
-}
-</style>
-
 <div id="formulaire">
-  <h2 class="contactTitle">Contactez nous</h2>
   <img src="/img/imageFormRecherche.png">
 </div>
-
 <div class="container">
   <div class="row">
-      <div class="col-sm">
-        <h3>Formulaire de contact :</h3>
-        <form>
+      <div class="col-sm-8">
+        <h3>Contactez-nous :</h3>
+        {% for flash_message in app.session.flashBag.get('success') %}
+          <div class="alert alert-success">
+              {{ flash_message }}
+          </div>
+        {% endfor %}
+        {% for flash_message in app.session.flashBag.get('error') %}
+          <div class="alert alert-error">
+              {{ flash_message }}
+          </div>
+        {% endfor %}
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
           <div class="form-group row">
-            <label for="inputName" class="col-sm-3 col-form-label">Nom :</label>
+            {{ form_label(form.nom, 'Nom :', {
+              'label_attr': {'class': 'col-sm-3 col-form-label'}
+              }) }}
+              <div class="col-sm-9">
+                {{ form_widget(form.nom) }}
+              </div>
+          </div>
+          <div class="form-group row">
+            {{ form_label(form.prenom, 'Prénom :', {
+              'label_attr': {'class': 'col-sm-3 col-form-label'}
+              }) }}
+              <div class="col-sm-9">
+                {{ form_widget(form.prenom) }}
+              </div>
+          </div>
+          <div class="form-group row">
+            {{ form_label(form.prenom, 'E-mail :', {
+              'label_attr': {'class': 'col-sm-3 col-form-label'}
+              }) }}
             <div class="col-sm-9">
-              <input id="inputName" type="text" class="form-control"/>
+              {{ form_widget(form.email) }}
             </div>
           </div>
           <div class="form-group row">
-            <label for="inputFirstName" class="col-sm-3 col-form-label">Prénom :</label>
+            {{ form_label(form.telephone, 'Téléphone :', {
+              'label_attr': {'class': 'col-sm-3 col-form-label'}
+              }) }}
             <div class="col-sm-9">
-              <input id="inputFirstName" type="text" class="form-control"/>
+              {{ form_widget(form.telephone) }}
             </div>
           </div>
           <div class="form-group row">
-            <label for="inputEmail" class="col-sm-3 col-form-label">E-mail :</label>
+            {{ form_label(form.sujet, 'Sujet :', {
+              'label_attr': {'class': 'col-sm-3 col-form-label'}
+              }) }}
             <div class="col-sm-9">
-              <input id="inputEmail" type="text" class="form-control"/>
+              {{ form_widget(form.sujet) }}
             </div>
           </div>
           <div class="form-group row">
-            <label for="inputPhone" class="col-sm-3 col-form-label">Téléphone :</label>
+            {{ form_label(form.message, 'Message :', {
+              'label_attr': {'class': 'col-sm-3 col-form-label'}
+              }) }}
             <div class="col-sm-9">
-              <input id="inputPhone" type="text" class="form-control"/>
+              {{ form_widget(form.message) }}
             </div>
           </div>
+          {{ form_widget(form.captcha) }}
           <div class="form-group row">
-            <label for="inputSubject" class="col-sm-3 col-form-label">Sujet :</label>
-            <div class="col-sm-9">
-              <input id="inputSubject" type="text" class="form-control"/>
-            </div>
+            <button type="submit" class="btn btn-success btn-lg btn-block">Envoyer</button>
           </div>
-          <div class="form-group row">
-            <label for="inputMessage" class="col-sm-3 col-form-label">Message :</label>
-            <div class="col-sm-9">
-              <textarea id="inputMessage" type="text" class="form-control"></textarea>
-            </div>
-          </div>
-        </form>
+        {{ form_end(form) }}
       </div>
-      <div class="col-sm">
-        <h3>Addresse :</h3>
-        <div id="map"></div>
-        <p>
-            55, rue Gustave Eiffel<br />168 REZÉ<br />France
-        </p>
-
+      <div class="col-sm-4">
+        <h3>Adresse :</h3>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83280.71776938635!2d2.8671825886990967!3d49.28544588451889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e883b6e52c4f35%3A0x910e94dfdbb0b056!2s55+Rue+Gustave+Eiffel%2C+60800+Cr%C3%A9py-en-Valois!5e0!3m2!1sfr!2sfr!4v1547210381301" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <p>55, Rue Gustave Eiffel<br />60800 Crépy-en-Valois<br />France</p>
         <h3>Horaires et numéro :</h3>
-        <p>Du lundi au samedi de 9h30 à 19h</p>
-        <p>01 77 13 02 24</p>
+        <p>Du lundi au samedi de 9h30 à 19h<br>01 77 13 02 24</p>
       </div>
   </div>
 </div>
