ajout des cgu + test mail

--- a/templates/emails/inscription.html.twig
+++ b/templates/emails/inscription.html.twig
@@ -1,7 +1,7 @@
-<h3>Félicitations vous êtes inscrits !</h3>
-Bonjour {{ prenom }}! Vous êtes désormais inscrits sur Atypik'House.
+<h3>Félicitations vous êtes inscrits !</h3><br>
+Bonjour {{ prenom }}! Vous êtes désormais inscrits sur Atypik'House.<br>
 Pour vous connecter, et commencer votre aventure atypique, veuillez cliquez <a href="localhost:8000/validerUser/{{ token }}">ici</a>.
-
+<br>
 Merci et à bientôt !
-
+<br>
 L'équipe Atypik'House.
