--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Atypik'House > {% block title %}{% endblock %}</title>
+  <title>{% block title %}{% endblock %} &bull; Atypik'House</title>
   <link rel="icon" type="image/png" href="/img/logo.png" />
   {% block stylesheet %}
   <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -86,7 +86,7 @@
         <div class="col-md-4 mx-auto">
           <h5 class="font-weight-bold text-uppercase mt-3 mb-4">A PROPOS...</h5>
           <p>Atypik'House est un site mis en place pour faciliter les démarches entre propriétaires de
-            logements atypiques, et rêveurs qui désirent passer une ou plusieurs nuit dans un endroit hors du commun...
+            logements atypiques, et rêveurs qui désirent passer une ou plusieurs nuits dans un endroit hors du commun...
             En espérant que vous trouverez votre bonheur, nous vous souhaitons une excellente visite.</p>
         </div>
         <hr class="w-100 d-md-none">
