--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -179,7 +179,10 @@
     <div class="col-lg-12">
     <center>
       <h4>Localisez l'hébergement</h4>
-      {{ logement.adresse ~ ' ' ~ logement.codePostal ~ ' ' ~ logement.getVille().getNom() }}
+      {{ logement.adresse ~ ' ' ~ logement.codePostal  }}
+      {% if logement.getVille() is not empty %}
+        {{ logement.getVille().getNom() }}
+      {% endif %}
       <br/>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5737941.053577054!2d-0.5600409326626958!3d45.39463663443821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ab22a7cd2b8547%3A0xe10e3cdc7f734cdc!2sLes+cabanes+dans+les+arbres!5e0!3m2!1sfr!2sfr!4v1544963589952"  height="550" frameborder="0" style="border:0; width: 100%" allowfullscreen></iframe>
     </center>
