bug ajout logement

--- a/templates/emails/ajout-logement.html.twig
+++ b/templates/emails/ajout-logement.html.twig
@@ -1,7 +1,6 @@
-<h3>Merci ! Vous avez proposé un logement</h3>
-Bonjour {{ prenom }}! Vous faites désormais partis de la famille Atypik'House.
-Vous recevrez bientôt un mail vous confirmant la validation de votre bien par notre équipe. Vous pourrez ensuite gérer les réservations de votre logement.
-
-Encore merci et à bientôt !
-
+<h3>Merci ! Vous avez proposé un logement</h3><br>
+Bonjour {{ prenom }}! Vous faites désormais partis de la famille Atypik'House.<br>
+Vous recevrez bientôt un mail vous confirmant la validation de votre bien par notre équipe.<br>
+Vous pourrez ensuite gérer les réservations de votre logement.<br>
+Encore merci et à bientôt !<br>
 L'équipe Atypik'House.
