--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Back Office - {% block title %}{% endblock %}</title>
+        <title>{% block title %}{% endblock %} &bull; Atypik'House - Back Office</title>
         <link rel="icon" type="image/png" href="/img/logo.png" />
         {% block stylesheets %}
             <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -22,7 +22,7 @@
                             Logements
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{{ path('logement_liste') }}">Liste des logements</a>
+                                <a class="dropdown-item" href="{{ path('logement_liste') }}">Liste de tous les logements</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path('reservation_liste') }}">Réservations</a>
                                 <div class="dropdown-divider"></div>
