--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -43,6 +43,9 @@
                 {{ form_row(form.nbPersonne) }}
             </div>
             <div class="form-group">
+                {{ form_row(form.nbCouchage) }}
+            </div>
+            <div class="form-group">
                 {{ form_row(form.photosUploads) }}
             </div>
             <br>
