--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,14 @@
     <img src="/img/logo.png" height="30" width="30" />
     Atypik'House
   </a>
-  
+  {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    {% if 'ROLE_ADMIN' in app.user.getRoles() %}
+        | 
+        <a id="title" class="navbar" href="{{ path('logement_liste') }}">
+        Accès BackOffice
+        </a>    
+    {% endif %}
+  {% endif %}  
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
