--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@
 #btnDeco{
 	margin-top: 0.5em;
 	margin-right: 1.825em;
+	
 	color: white;
 	background-color: #C64300; 
 }
@@ -14,13 +15,20 @@
 	background-color: #C64300;
 }
 
+#avatarLogin{
+	margin-right: 3em;
+}
 #Utilisateur{
+	margin-right: 3em;
 	margin-top: 0.5em;
 	text-decoration:none; 
 	color: black;
 	font-weight: bold;
 }
 
+#cloche{
+	margin-right: 3em;
+}
 
 #cloche:hover{
 	opacity: 0.5;
@@ -374,9 +382,75 @@ ul.list-unstyled li a{
 
 	/*Mobile*/
 
-	@media (min-width: 576px) and (max-width: 767px)
-{
-    #avatarLogin{
-		right:0;
-	}
+.sousMenu{
+	border-bottom: 1px solid #C64300;
 }
+/*Profil*/
+
+.menuProfil{
+	height: 2em;
+}
+
+.navProfil .nav-tabs{
+	border-bottom: none;
+  }
+  
+  .navProfil .list-group-item.active{
+	background-color: #C64300;
+  }
+  
+  .navProfil .list-group-item{
+	border:none;
+	width: 160px;
+  }
+  
+  .navProfil ul{
+	margin-top: 0.7em;
+  }
+  
+  .img{
+  
+	height: 180px;
+	width: 100%;
+	object-fit: cover; 
+  }
+  
+  .noborder{
+	border: none;
+  }
+  
+  .cardProfil{
+	  margin-top: 0.7em;
+  }
+  
+  .cardProfil .card-body{
+	  border: none;
+  }
+  
+  
+  .cardProfil .mb-3:hover{
+	  
+  }
+  
+  .cardProfil form{
+	  margin-left: 2em;
+  }
+  
+  #accordion .card-header{
+	  background-color: green;
+  }
+  
+  
+  #accordion .card-header button{
+	  color: white;
+  }
+  
+  
+  .boxReservation{
+	  padding-bottom: 30px;
+  }
+  
+  
+  .boxReservation:hover{
+	  box-shadow: 8px 8px 12px #aaa;
+  }
